--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-rewire": "^1.1.0",
     "babel-preset-env": "^1.6.1",
     "docdash": "^0.4.0",
+    "fs-extra": "^6.0.1",
     "jsdoc": "^3.5.5",
     "lodash": "^4.17.10",
     "mkdirp-promise": "^5.0.1",
