--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bottom-line",
+  "name": "bottom-line-utils",
   "version": "0.1.0",
   "main": "src/index.js",
   "repository": "https://github.com/dzek69/bottom-line.git",
