### Added - `set` function - @todo for get/set methods, that should test and support correctly Sets, Maps, etc. ### Fixed - `main` path in package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.1.2",
-  "main": "index.js",
+  "version": "0.2.0-unreleased.1",
+  "main": "src/index.js",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
