### Reverted - `main` path in package.json ### Added - dev stuff: linter, editorconfig ### Changed - upgraded library template - switched code to es modules - linted code

--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,14 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/env",
       {
         "targets": {
           "browsers": [
-            "last 2 versions", "> 5%", "ie > 9"
+            "last 2 versions", "> 5%", "ie > 11"
           ]
-        }
+        },
+        "useBuiltIns": "entry"
       }
     ]
   ],
