--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
   "name": "bottom-line-utils",
   "version": "0.2.0-unreleased.1",
-  "main": "src/index.js",
+  "main": "index.js",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
   "scripts": {
-    "test": "NODE_ENV=testing mocha 'src/**/*.spec.js'",
-    "docs": "node build-scripts/docs && jsdoc src/* README.md -t node_modules/docdash -d ./docs -u ./tutorials",
+    "test": "cross-env NODE_ENV=testing mocha 'src/**/*.spec.js'",
+    "docs": "node build-scripts/docs && jsdoc src README.md -t node_modules/docdash -d ./docs -u ./tutorials && node build-scripts/docs.after",
     "transpile": "node build-scripts/transpile && babel src -d dist --ignore spec.js",
-    "prepublishOnly": "node build-scripts/prepublish && npm run docs && npm run transpile",
-    "postpublish": "node build-scripts/postpublish"
+    "prepublishOnly": "npm run test && npm run lint && npm run docs",
+    "prepack": "node build-scripts/prepack && npm run transpile",
+    "postpack": "node build-scripts/postpack",
+    "lint": "eslint src/**/*.js src/*.js",
+    "lint:fix": "npm run lint -- --fix"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-rewire": "^1.1.0",
-    "babel-preset-env": "^1.6.1",
-    "docdash": "^0.4.0",
-    "fs-extra": "^6.0.1",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/register": "^7.0.0",
+    "@dzek69/eslint-config-base": "^0.0.1",
+    "babel-plugin-rewire": "^1.2.0",
+    "cross-env": "^5.2.0",
+    "docdash": "^1.0.0",
+    "eslint": "^5.9.0",
+    "fs-extra": "^7.0.1",
     "jsdoc": "^3.5.5",
-    "lodash": "^4.17.10",
-    "mkdirp-promise": "^5.0.1",
-    "mocha": "^4.0.1",
-    "must": "^0.13.4",
-    "rmdir": "^1.2.0"
+    "mocha": "^5.2.0",
+    "must": "^0.13.4"
   }
 }
