### Fixed - missing labels in `set` tests - disabled removing unused labels in tests - changelog previous release date & version number
### Changed
- improved one `set` test

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
                 "max-statements": "off",
                 "no-empty-function": "off",
                 "no-magic-numbers": "off",
+                "no-unused-labels": "off",
                 "prefer-rest-params": "off"
             }
         }
