--- a/.npmignore
+++ b/.npmignore
@@ -2,12 +2,12 @@
 /build-scripts/
 /test/
 /dist/**/*.spec.js
-/src/
 
-/.babelrc
+/.babelrc.cjs
 /yarn.lock
 /*.tgz
 /*.log
 /.yarnclean
+/jsdoc.json
 /.editorconfig
 /.eslintrc.json
