--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.11.0-beta.2",
+  "version": "0.12.0",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
