--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.13.0",
+  "version": "0.13.1",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
@@ -26,7 +26,7 @@
     }
   },
   "main": "./dist/index.js",
-  "types": "./esm/index.d.js",
+  "types": "./esm/index.d.ts",
   "module": "./esm/index.js",
   "type": "module",
   "dependencies": {},
@@ -35,8 +35,8 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@dzek69/eslint-config-base": "^2.0.0",
-    "@dzek69/eslint-config-typescript": "^0.2.2",
-    "@types/lodash": "^4.14.167",
+    "@dzek69/eslint-config-typescript": "^0.2.4",
+    "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.14.0",
@@ -47,8 +47,8 @@
     "must": "^0.13.4",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.20.4",
-    "typescript": "^4.1.2"
+    "typedoc": "^0.20.35",
+    "typescript": "^4.2.4"
   },
   "husky": {
     "hooks": {
@@ -56,7 +56,7 @@
     }
   },
   "libraryTemplate": {
-    "version": "0.0.1",
+    "version": "3.0.2",
     "language": "typescript",
     "fixDefaultForCommonJS": false
   }
