--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.13.1",
+  "version": "0.13.2",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
@@ -16,8 +16,7 @@
     "lint:fix": "yarn lint --fix",
     "prepack": "yarn compile",
     "prepublishOnly": "yarn lint && yarn test && yarn docs",
-    "start:dev": "nodemon",
-    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
+    "start:dev": "nodemon"
   },
   "exports": {
     ".": {
@@ -35,7 +34,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@dzek69/eslint-config-base": "^2.0.0",
-    "@dzek69/eslint-config-typescript": "^0.2.4",
+    "@dzek69/eslint-config-typescript": "^0.3.2",
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
@@ -48,7 +47,8 @@
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typedoc": "^0.20.35",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "babel-plugin-module-extension": "^0.1.3"
   },
   "husky": {
     "hooks": {
@@ -56,8 +56,9 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.0.2",
+    "version": "3.1.0",
     "language": "typescript",
-    "fixDefaultForCommonJS": false
+    "fixDefaultForCommonJS": false,
+    "jsx": false
   }
 }
