--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.13.2",
+  "version": "0.14.0",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
@@ -28,7 +28,9 @@
   "types": "./esm/index.d.ts",
   "module": "./esm/index.js",
   "type": "module",
-  "dependencies": {},
+  "dependencies": {
+    "better-custom-error": "~4.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
@@ -38,6 +40,7 @@
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
+    "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^7.14.0",
     "fs-extra": "^9.0.1",
     "husky": "^4.3.0",
@@ -47,8 +50,7 @@
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
     "typedoc": "^0.20.35",
-    "typescript": "^4.2.4",
-    "babel-plugin-module-extension": "^0.1.3"
+    "typescript": "^4.2.4"
   },
   "husky": {
     "hooks": {
