+ `seq` with early break mode = upgraded typings for `last`

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.14.1",
+  "version": "0.15.0",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
     "test:lodashImports": "node test/lodash-tree.cjs",
-    "docs": "typedoc src/index.ts --out docs --listInvalidSymbolLinks --includes tutorials",
+    "docs": "typedoc src/index.ts --out docs --listInvalidSymbolLinks --includes tutorials --theme pages-plugin --includeVersion",
     "compile": "yarn compile:esm && yarn compile:cjs",
     "compile:esm": "rm -rf esm && tsc && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
@@ -15,8 +15,9 @@
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
     "lint:fix": "yarn lint --fix",
     "prepack": "yarn compile",
-    "prepublishOnly": "yarn lint && yarn test && yarn docs",
-    "start:dev": "nodemon"
+    "prepublishOnly": "yarn audit && yarn lint && yarn test && yarn docs",
+    "start:dev": "nodemon",
+    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
   },
   "exports": {
     ".": {
@@ -36,7 +37,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@dzek69/eslint-config-base": "^2.0.0",
-    "@dzek69/eslint-config-typescript": "^0.3.2",
+    "@dzek69/eslint-config-typescript": "^0.4.0",
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
@@ -44,13 +45,15 @@
     "eslint": "^7.14.0",
     "fs-extra": "^9.0.1",
     "husky": "^4.3.0",
-    "jest": "^26.6.3",
-    "lodash": "^4.17.20",
+    "jest": "^27.0.6",
+    "lodash": "^4.17.21",
     "must": "^0.13.4",
     "nodemon": "^2.0.6",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.20.35",
-    "typescript": "^4.2.4"
+    "typedoc": "^0.21.2",
+    "typescript": "^4.2.4",
+    "@types/jest": "^26.0.23",
+    "typedoc-plugin-pages-fork-fork": "^0.0.3"
   },
   "husky": {
     "hooks": {
@@ -58,7 +61,7 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.1.0",
+    "version": "3.3.1",
     "language": "typescript",
     "fixDefaultForCommonJS": false,
     "jsx": false
