--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.15.0",
+  "version": "0.16.0",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
@@ -9,7 +9,7 @@
     "test:lodashImports": "node test/lodash-tree.cjs",
     "docs": "typedoc src/index.ts --out docs --listInvalidSymbolLinks --includes tutorials --theme pages-plugin --includeVersion",
     "compile": "yarn compile:esm && yarn compile:cjs",
-    "compile:esm": "rm -rf esm && tsc && node ./build-scripts/compile.esm.after.mjs",
+    "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
@@ -36,13 +36,13 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@dzek69/eslint-config-base": "^2.0.0",
+    "@dzek69/eslint-config-base": "^2.1.0",
     "@dzek69/eslint-config-typescript": "^0.4.0",
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^4.11.1",
     "@typescript-eslint/parser": "^4.11.1",
     "babel-plugin-module-extension": "^0.1.3",
-    "eslint": "^7.14.0",
+    "eslint": "^7.32.0",
     "fs-extra": "^9.0.1",
     "husky": "^4.3.0",
     "jest": "^27.0.6",
@@ -61,7 +61,7 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.3.1",
+    "version": "3.4.0",
     "language": "typescript",
     "fixDefaultForCommonJS": false,
     "jsx": false
