+ `wait` method + `mapAsync` method

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,9 @@
             "env": {
                 "jest": true
             },
+            "globals": {
+                "must": true
+            },
             "rules": {
                 "func-names": "off",
                 "global-require": "off",
