--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.18.0",
+  "version": "0.19.0",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
@@ -29,9 +29,7 @@
   "types": "./esm/index.d.ts",
   "module": "./esm/index.js",
   "type": "module",
-  "dependencies": {
-    "better-custom-error": "~4.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
@@ -45,13 +43,13 @@
     "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^7.32.0",
     "fs-extra": "^9.0.1",
-    "husky": "^4.3.0",
-    "jest": "^27.0.6",
+    "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "lodash": "^4.17.21",
     "must": "^0.13.4",
-    "nodemon": "^2.0.14",
+    "nodemon": "^2.0.15",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.21.2",
+    "typedoc": "^0.21.10",
     "typedoc-plugin-pages-fork-fork": "^0.0.3",
     "typescript": "^4.2.4"
   },
@@ -61,7 +59,7 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.4.0",
+    "version": "3.4.1",
     "language": "typescript",
     "fixDefaultForCommonJS": false,
     "jsx": false
