--- a/pagesconfig.json
+++ b/pagesconfig.json
@@ -1,3 +1,6 @@
 {
-    "groups": []
+    "pages": [
+        { "title": "Introduction", "source": "Introduction.md" }
+    ],
+    "source": "tutorials"
 }
