--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.23.1",
+  "version": "0.23.2",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
     "test:lodashImports": "node test/lodash-tree.cjs",
-    "docs": "typedoc src/index.ts --out docs --listInvalidSymbolLinks --includes tutorials --theme pages-plugin --includeVersion",
+    "docs": "typedoc src/index.ts --out docs --includeVersion --pluginPages ./pagesconfig.json",
     "compile": "yarn compile:esm && yarn compile:cjs",
     "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
@@ -33,14 +33,14 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
-    "@dzek69/eslint-config-base": "^2.1.0",
-    "@dzek69/eslint-config-typescript": "^0.4.0",
+    "@dzek69/eslint-config-base": "^2.2.0",
+    "@dzek69/eslint-config-typescript": "^1.0.1",
     "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.168",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
     "babel-plugin-module-extension": "^0.1.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.18.0",
     "fs-extra": "^9.0.1",
     "husky": "^7.0.4",
     "jest": "^27.5.1",
@@ -48,9 +48,12 @@
     "must": "^0.13.4",
     "nodemon": "^2.0.19",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.21.10",
-    "typedoc-plugin-pages-fork-fork": "^0.0.3",
-    "typescript": "^4.2.4"
+    "typedoc": "^0.23.8",
+    "typescript": "^4.7.4",
+    "eslint-plugin-import": "^2.26.0",
+    "@dzek69/eslint-config-import": "^1.0.0",
+    "@dzek69/eslint-config-import-typescript": "^1.0.0",
+    "@knodes/typedoc-plugin-pages": "^0.23.1"
   },
   "husky": {
     "hooks": {
@@ -58,7 +61,7 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.4.1",
+    "version": "3.5.2",
     "language": "typescript",
     "fixDefaultForCommonJS": false,
     "jsx": false
