--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.24.0",
+  "version": "0.24.1",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
@@ -17,7 +17,8 @@
     "prepack": "yarn compile",
     "prepublishOnly": "yarn audit && yarn lint && yarn test && yarn docs",
     "start:dev": "nodemon",
-    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev"
+    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev",
+    "prepare": "husky install"
   },
   "exports": {
     ".": {
@@ -42,7 +43,7 @@
     "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^8.18.0",
     "fs-extra": "^9.0.1",
-    "husky": "^7.0.4",
+    "husky": "^8.0.1",
     "jest": "^27.5.1",
     "lodash": "^4.17.21",
     "must": "^0.13.4",
@@ -61,7 +62,7 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.5.2",
+    "version": "3.5.3",
     "language": "typescript",
     "fixDefaultForCommonJS": false,
     "jsx": false
