--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "bottom-line-utils",
-  "version": "0.24.1",
+  "version": "0.24.1+",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
   "scripts": {
     "test": "NODE_ENV=test jest",
     "test:lodashImports": "node test/lodash-tree.cjs",
-    "docs": "typedoc src/index.ts --out docs --includeVersion --pluginPages ./pagesconfig.json",
+    "docs": "typedoc src/index.ts --skipErrorChecking --out docs --includeVersion --pluginPages ./pagesconfig.json",
     "compile": "yarn compile:esm && yarn compile:cjs",
     "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
@@ -18,11 +18,15 @@
     "prepublishOnly": "yarn audit && yarn lint && yarn test && yarn docs",
     "start:dev": "nodemon",
     "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "updates": "npx --yes npm-check-updates --dep prod",
+    "updates:dev": "npx --yes npm-check-updates --dep dev",
+    "updates:all": "npx --yes npm-check-updates"
   },
   "exports": {
     ".": {
       "require": "./dist/index.js",
+      "types": "./esm/index.d.ts",
       "default": "./esm/index.js"
     }
   },
@@ -31,30 +35,31 @@
   "module": "./esm/index.js",
   "type": "module",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-typescript": "^7.12.7",
-    "@dzek69/eslint-config-base": "^2.2.0",
-    "@dzek69/eslint-config-typescript": "^1.0.1",
-    "@types/jest": "^26.0.23",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-typescript": "^7.18.6",
+    "@dzek69/eslint-config-base": "^2.3.0",
+    "@dzek69/eslint-config-typescript": "^1.0.2",
+    "@types/jest": "^29.0.3",
     "@types/lodash": "^4.14.168",
-    "@typescript-eslint/eslint-plugin": "^5.30.3",
-    "@typescript-eslint/parser": "^5.30.3",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
     "babel-plugin-module-extension": "^0.1.3",
-    "eslint": "^8.18.0",
-    "fs-extra": "^9.0.1",
+    "eslint": "^8.24.0",
+    "fs-extra": "^10.1.0",
     "husky": "^8.0.1",
-    "jest": "^27.5.1",
+    "jest": "^29.1.1",
     "lodash": "^4.17.21",
     "must": "^0.13.4",
-    "nodemon": "^2.0.19",
+    "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.8",
-    "typescript": "^4.7.4",
+    "typedoc": "^0.23.15",
+    "typescript": "^4.9.5",
     "eslint-plugin-import": "^2.26.0",
     "@dzek69/eslint-config-import": "^1.0.0",
     "@dzek69/eslint-config-import-typescript": "^1.0.0",
-    "@knodes/typedoc-plugin-pages": "^0.23.1"
+    "@knodes/typedoc-plugin-pages": "^0.23.1",
+    "prettier": "^2.8.3"
   },
   "husky": {
     "hooks": {
@@ -62,7 +67,7 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.5.3",
+    "version": "3.8.0",
     "language": "typescript",
     "fixDefaultForCommonJS": false,
     "jsx": false
