- [BREAKING] pack method - [BREAKING] pages method ~ fixed typedoc warnings = added some examples to docs = [BREAKING] `mapValues` no longer has property `unset` but it exports `mapValuesUNSET` = [BREAKING] replaced `merge.UNSET` with `mergeUNSET` = [BREAKING] replaced `mapValues.REMOVE` with `mapValuesUNSET`

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bottom-line-utils",
-  "version": "0.24.1+",
+  "name": "@ezez/utils",
+  "version": "1.0.0",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
