--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ezez/utils",
-  "version": "1.7.0",
+  "version": "1.7.0+",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
@@ -34,16 +34,17 @@
   "types": "./esm/index.d.ts",
   "module": "./esm/index.js",
   "type": "module",
+  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.21.4",
-    "@babel/preset-env": "^7.21.4",
-    "@babel/preset-typescript": "^7.21.4",
+    "@babel/core": "^7.22.1",
+    "@babel/preset-env": "^7.22.4",
+    "@babel/preset-typescript": "^7.21.5",
     "@dzek69/eslint-config-base": "^2.4.0",
     "@dzek69/eslint-config-import": "^1.2.0",
     "@dzek69/eslint-config-import-typescript": "^1.0.0",
     "@dzek69/eslint-config-typescript": "^1.1.0",
     "@knodes/typedoc-plugin-pages": "^0.23.4",
-    "@types/jest": "^29.5.0",
+    "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.168",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -56,10 +57,10 @@
     "lodash": "^4.17.21",
     "must": "^0.13.4",
     "nodemon": "^2.0.22",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.28",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   },
   "husky": {
     "hooks": {
@@ -67,9 +68,9 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.9.1",
+    "version": "3.10.0",
     "language": "typescript",
     "fixDefaultForCommonJS": false,
     "jsx": false
-  }
+  },
 }
