--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,6 +37,7 @@
                 "@typescript-eslint/no-unsafe-call": "off",
                 "@typescript-eslint/no-unsafe-member-access": "off",
                 "@typescript-eslint/no-unnecessary-condition": "off",
+                "@typescript-eslint/require-await": "off",
                 "no-unused-labels": "off"
             }
         }
