--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,58 +1,59 @@
 {
     "compilerOptions": {
+        "allowJs": true,
+        "allowSyntheticDefaultImports": true,
+        "allowUmdGlobalAccess": false,
+        "alwaysStrict": true,
+        "baseUrl": null,
+        "checkJs": false,
+        "composite": false,
+        "declaration": true,
+        "declarationMap": true,
+        "downlevelIteration": false,
+        "emitDecoratorMetadata": null,
+        "esModuleInterop": true,
+        "experimentalDecorators": null,
+        "forceConsistentCasingInFileNames": true,
+        "importHelpers": false,
         "incremental": false,
-        "target": "es2019",
-        "module": "es2015",
+        "inlineSourceMap": null,
+        "inlineSources": null,
+        "isolatedModules": true,
+        "jsx": "react",
         "lib": [
             "es2019",
             "dom"
         ],
-        "allowJs": true,
-        "checkJs": false,
-        "jsx": "react",
-        "declaration": true,
-        "declarationMap": true,
-        "sourceMap": true,
-        "outFile": null,
-        "outDir": "./esm",
-        "rootDir": "./src",
-        "composite": false,
-        "tsBuildInfoFile": null,
-        "removeComments": true,
+        "mapRoot": null,
+        "module": "es2015",
+        "moduleResolution": "node",
         "noEmit": false,
-        "importHelpers": false,
-        "downlevelIteration": false,
-        "isolatedModules": true,
-        "strict": true,
+        "noFallthroughCasesInSwitch": false,
         "noImplicitAny": true,
-        "strictNullChecks": true,
-        "strictFunctionTypes": true,
-        "strictBindCallApply": true,
-        "strictPropertyInitialization": true,
+        "noImplicitReturns": false,
         "noImplicitThis": true,
-        "alwaysStrict": true,
+        "noUncheckedIndexedAccess": true,
         "noUnusedLocals": false,
         "noUnusedParameters": false,
-        "noImplicitReturns": false,
-        "noFallthroughCasesInSwitch": false,
-        "moduleResolution": "node",
-        "baseUrl": null,
+        "outDir": "./esm",
+        "outFile": null,
         "paths": null,
-        "rootDirs": null,
-        "typeRoots": null,
-        "types": null,
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
         "preserveSymlinks": false,
-        "allowUmdGlobalAccess": false,
-        "sourceRoot": null,
-        "mapRoot": null,
-        "inlineSourceMap": null,
-        "inlineSources": null,
-        "experimentalDecorators": null,
-        "emitDecoratorMetadata": null,
+        "removeComments": true,
+        "rootDir": "./src",
+        "rootDirs": null,
         "skipLibCheck": true,
-        "forceConsistentCasingInFileNames": true
+        "sourceMap": true,
+        "sourceRoot": null,
+        "strict": true,
+        "strictBindCallApply": true,
+        "strictFunctionTypes": true,
+        "strictNullChecks": true,
+        "strictPropertyInitialization": true,
+        "target": "es2019",
+        "tsBuildInfoFile": null,
+        "typeRoots": null,
+        "types": null
     },
     "include": [
         "src/"
