=! code is compiled to es2020 due to `bigint` usage, if you are not using `serialize` or `deserialize` you can still transpile this lib yourself + `serialize` method + `deserialize` method + `replaceDeep` method

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -1,73 +1,9 @@
 {
-    "compilerOptions": {
-        "allowJs": true,
-        "allowSyntheticDefaultImports": true,
-        "allowUmdGlobalAccess": false,
-        "alwaysStrict": true,
-        "baseUrl": null,
-        "checkJs": false,
-        "composite": false,
-        "declaration": true,
-        "declarationMap": true,
-        "downlevelIteration": false,
-        "emitDecoratorMetadata": null,
-        "esModuleInterop": true,
-        "exactOptionalPropertyTypes": true,
-        "experimentalDecorators": null,
-        "forceConsistentCasingInFileNames": true,
-        "importHelpers": false,
-        "incremental": false,
-        "inlineSourceMap": null,
-        "inlineSources": null,
-        "isolatedModules": true,
-        "jsx": "react",
-        "lib": [
-            "es2019",
-            "dom"
-        ],
-        "mapRoot": null,
-        "module": "commonjs",
-        "moduleDetection": "auto",
-        "moduleResolution": "node",
-        "moduleSuffixes": [
-            ""
-        ],
-        "noEmit": false,
-        "noFallthroughCasesInSwitch": false,
-        "noImplicitAny": true,
-        "noImplicitOverride": true,
-        "noImplicitReturns": true,
-        "noImplicitThis": true,
-        "noUncheckedIndexedAccess": true,
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
-        "outDir": "./dist",
-        "outFile": null,
-        "paths": null,
-        "preserveSymlinks": false,
-        "preserveValueImports": false,
-        "removeComments": true,
-        "rootDir": "./src",
-        "rootDirs": null,
-        "skipLibCheck": true,
-        "sourceMap": true,
-        "sourceRoot": null,
-        "strict": true,
-        "strictBindCallApply": true,
-        "strictFunctionTypes": true,
-        "strictNullChecks": true,
-        "strictPropertyInitialization": true,
-        "target": "es2017",
-        "tsBuildInfoFile": null,
-        "typeRoots": null,
-        "types": null,
-        "useUnknownInCatchVariables": true
-    },
-    "include": [
-        "src/"
+    "extends": [
+        "./tsconfig.json"
     ],
-    "exclude": [
-        "src/**/*.spec.ts",
-        "src/__test/**"
-    ]
+    "compilerOptions": {
+        "module": "commonjs",
+        "outDir": "./dist"
+    }
 }
