--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
         "inlineSourceMap": null,
         "inlineSources": null,
         "isolatedModules": true,
-        "jsx": "react",
+        "jsx": "react-jsx",
         "lib": [
-            "es2019",
+            "es2020",
             "dom"
         ],
         "mapRoot": null,
@@ -43,7 +43,7 @@
         "noUnusedParameters": false,
         "outDir": "./esm",
         "outFile": null,
-        "paths": null,
+        "paths": {},
         "preserveSymlinks": false,
         "preserveValueImports": false,
         "removeComments": true,
@@ -57,7 +57,7 @@
         "strictFunctionTypes": true,
         "strictNullChecks": true,
         "strictPropertyInitialization": true,
-        "target": "es2019",
+        "target": "es2020",
         "tsBuildInfoFile": null,
         "typeRoots": null,
         "types": null,
