--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ezez/utils",
-  "version": "1.9.0",
+  "version": "2.0.0",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
@@ -8,20 +8,20 @@
     "test": "NODE_ENV=test jest",
     "test:lodashImports": "node test/lodash-tree.cjs",
     "docs": "typedoc src/index.ts --skipErrorChecking --out docs --includeVersion",
-    "compile": "yarn compile:esm && yarn compile:cjs",
+    "compile": "pnpm run compile:esm && pnpm run compile:cjs",
     "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
-    "lint:fix": "yarn lint --fix",
-    "prepack": "yarn compile",
-    "prepublishOnly": "yarn audit && yarn lint && yarn test && yarn docs",
+    "lint:fix": "pnpm run lint --fix",
+    "prepack": "pnpm run compile",
+    "prepublishOnly": "pnpm run lint && pnpm run test && pnpm run docs",
     "start:dev": "nodemon",
-    "start:dev:compatibility": "TS_NODE_FILES=true yarn start:dev",
+    "start:dev:compatibility": "TS_NODE_FILES=true pnpm run start:dev",
     "prepare": "husky install",
-    "updates": "npx --yes npm-check-updates --dep prod",
-    "updates:dev": "npx --yes npm-check-updates --dep dev",
-    "updates:all": "npx --yes npm-check-updates"
+    "updates": "pnpm dlx npm-check-updates --dep prod",
+    "updates:dev": "pnpm dlx npm-check-updates --dep dev",
+    "updates:all": "pnpm dlx npm-check-updates"
   },
   "exports": {
     ".": {
@@ -34,41 +34,42 @@
   "types": "./esm/index.d.ts",
   "module": "./esm/index.js",
   "type": "module",
-  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.22.1",
-    "@babel/preset-env": "^7.22.4",
-    "@babel/preset-typescript": "^7.21.5",
+    "@babel/core": "^7.22.20",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.22.15",
     "@dzek69/eslint-config-base": "^2.5.0",
-    "@dzek69/eslint-config-import": "^1.2.0",
-    "@dzek69/eslint-config-import-typescript": "^1.0.0",
-    "@dzek69/eslint-config-typescript": "^1.1.0",
+    "@dzek69/eslint-config-import": "^1.3.0",
+    "@dzek69/eslint-config-import-typescript": "^1.0.1",
+    "@dzek69/eslint-config-typescript": "^1.1.1",
     "@knodes/typedoc-plugin-pages": "^0.23.4",
-    "@types/jest": "^29.5.2",
+    "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.168",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@types/node": "^20.8.3",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "babel-plugin-module-extension": "^0.1.3",
     "eslint": "^8.44.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "^2.28.1",
     "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "must": "^0.13.4",
-    "nodemon": "^2.0.22",
+    "nodemon": "^3.0.1",
     "prettier": "^2.8.8",
+    "resolve-tspaths": "^0.8.15",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.28",
-    "typescript": "^5.1.3"
+    "typescript": "5.0.4"
   },
   "husky": {
     "hooks": {
-      "pre-push": "yarn prepublishOnly && yarn compile"
+      "pre-push": "pnpm run prepublishOnly && pnpm run compile"
     }
   },
   "libraryTemplate": {
-    "version": "3.10.0",
+    "version": "3.11.2",
     "language": "typescript",
     "fixDefaultForCommonJS": false,
     "jsx": false
