--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,65 +1,8 @@
 {
-    "compilerOptions": {
-        "allowJs": true,
-        "allowSyntheticDefaultImports": true,
-        "allowUmdGlobalAccess": false,
-        "alwaysStrict": true,
-        "baseUrl": null,
-        "checkJs": false,
-        "composite": false,
-        "declaration": true,
-        "declarationMap": true,
-        "downlevelIteration": false,
-        "emitDecoratorMetadata": null,
-        "esModuleInterop": true,
-        "experimentalDecorators": null,
-        "forceConsistentCasingInFileNames": true,
-        "importHelpers": false,
-        "incremental": false,
-        "inlineSourceMap": null,
-        "inlineSources": null,
-        "isolatedModules": true,
-        "jsx": "react",
-        "lib": [
-            "es2019",
-            "dom"
-        ],
-        "mapRoot": null,
-        "module": "es2015",
-        "moduleResolution": "node",
-        "noEmit": false,
-        "noFallthroughCasesInSwitch": false,
-        "noImplicitAny": true,
-        "noImplicitReturns": false,
-        "noImplicitThis": true,
-        "noUncheckedIndexedAccess": true,
-        "noUnusedLocals": false,
-        "noUnusedParameters": false,
-        "outDir": "./esm",
-        "outFile": null,
-        "paths": null,
-        "preserveSymlinks": false,
-        "removeComments": true,
-        "rootDir": "./src",
-        "rootDirs": null,
-        "skipLibCheck": true,
-        "sourceMap": true,
-        "sourceRoot": null,
-        "strict": true,
-        "strictBindCallApply": true,
-        "strictFunctionTypes": true,
-        "strictNullChecks": true,
-        "strictPropertyInitialization": true,
-        "target": "es2019",
-        "tsBuildInfoFile": null,
-        "typeRoots": null,
-        "types": null
-    },
-    "include": [
-        "src/"
+    "extends": [
+        "./tsconfig.json"
     ],
-    "exclude": [
-        "src/**/*.spec.ts",
-        "src/__test/**"
-    ]
+    "compilerOptions": {
+        "outDir": "./esm",
+    }
 }
