--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ezez/utils",
-  "version": "3.0.0",
+  "version": "3.0.0+",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
