--- a/.npmignore
+++ b/.npmignore
@@ -3,7 +3,6 @@
 /test/
 
 /.editorconfig
-/.eslintrc.json
 /jest.config.cjs
 /nodemon.json
 /tsconfig.*
@@ -12,7 +11,7 @@
 /*.tgz
 /*.log
 /.yarnclean
-/.eslintrc.json
 /test.mjs
 
 /pagesconfig.json
+/eslint.config.mjs
