--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ezez/utils",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "repository": "https://github.com/dzek69/bottom-line.git",
   "author": "Jacek Nowacki @dzek69 <git-public@dzek.eu>",
   "license": "MIT",
@@ -12,7 +12,7 @@
     "compile:esm": "rm -rf esm && tsc --project tsconfig.esm.json && node ./build-scripts/compile.esm.after.mjs",
     "compile:cjs": "rm -rf dist && tsc --project tsconfig.cjs.json && node ./build-scripts/compile.cjs.after.mjs",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src --ext .ts,.tsx,.js,.jsx,.mjs",
+    "lint": "eslint src",
     "lint:fix": "pnpm run lint --fix",
     "prepack": "pnpm run compile",
     "prepublishOnly": "pnpm run lint && pnpm run test && pnpm run docs",
@@ -38,30 +38,22 @@
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
     "@babel/preset-typescript": "^7.24.1",
-    "@dzek69/eslint-config-base": "^2.5.0",
-    "@dzek69/eslint-config-import": "^1.3.0",
-    "@dzek69/eslint-config-import-typescript": "^1.0.1",
-    "@dzek69/eslint-config-typescript": "^1.1.1",
-    "@knodes/typedoc-plugin-pages": "^0.23.4",
+    "@ezez/eslint": "^0.0.6",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.168",
     "@types/node": "^20.8.3",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
     "babel-plugin-module-extension": "^0.1.3",
-    "eslint": "^8.44.0",
-    "eslint-plugin-import": "^2.28.1",
     "fs-extra": "^11.1.1",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lodash": "^4.17.21",
     "must": "^0.13.4",
     "nodemon": "^3.0.1",
-    "prettier": "^2.8.8",
+    "prettier": "^3.2.5",
     "resolve-tspaths": "^0.8.15",
-    "ts-node": "^10.9.1",
-    "typedoc": "^0.23.28",
-    "typescript": "5.0.4"
+    "ts-node": "^10.9.2",
+    "typedoc": "^0.26.0-beta.1",
+    "typescript": "^5.4.5"
   },
   "husky": {
     "hooks": {
@@ -69,9 +61,10 @@
     }
   },
   "libraryTemplate": {
-    "version": "3.11.2",
+    "version": "3.12.0",
     "language": "typescript",
     "fixDefaultForCommonJS": false,
     "jsx": false
-  }
+  },
+  "dependencies": {}
 }
